--- a/equation/untitled/mainwindow.ui
+++ b/equation/untitled/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>962</width>
-    <height>753</height>
+    <width>963</width>
+    <height>795</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,110 +17,181 @@
    <widget class="GLWidget" name="openGLWidget">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>20</y>
-      <width>751</width>
-      <height>676</height>
+      <x>148</x>
+      <y>9</y>
+      <width>806</width>
+      <height>716</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
     </property>
    </widget>
-   <widget class="QGroupBox" name="groupBox">
+   <widget class="QGroupBox" name="groupBox_3">
     <property name="geometry">
      <rect>
-      <x>5</x>
-      <y>20</y>
-      <width>186</width>
-      <height>76</height>
+      <x>9</x>
+      <y>9</y>
+      <width>126</width>
+      <height>716</height>
      </rect>
     </property>
-    <property name="title">
-     <string>Function</string>
-    </property>
-    <widget class="QLineEdit" name="equation">
-     <property name="geometry">
-      <rect>
-       <x>5</x>
-       <y>35</y>
-       <width>181</width>
-       <height>25</height>
-      </rect>
-     </property>
-    </widget>
-   </widget>
-   <widget class="QGroupBox" name="groupBox_2">
-    <property name="geometry">
-     <rect>
-      <x>5</x>
-      <y>105</y>
-      <width>186</width>
-      <height>101</height>
-     </rect>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
     </property>
     <property name="title">
-     <string>Window</string>
+     <string>Controls</string>
     </property>
-    <widget class="QDoubleSpinBox" name="a_spinbox">
+    <widget class="QGroupBox" name="groupBox">
      <property name="geometry">
       <rect>
-       <x>5</x>
-       <y>30</y>
-       <width>56</width>
-       <height>26</height>
+       <x>10</x>
+       <y>25</y>
+       <width>116</width>
+       <height>76</height>
       </rect>
      </property>
-     <property name="minimum">
-      <double>-1000.000000000000000</double>
+     <property name="title">
+      <string>Function</string>
      </property>
-     <property name="maximum">
-      <double>1000.000000000000000</double>
-     </property>
-     <property name="singleStep">
-      <double>0.100000000000000</double>
-     </property>
-     <property name="value">
-      <double>-1.000000000000000</double>
-     </property>
+     <widget class="QLineEdit" name="equation">
+      <property name="geometry">
+       <rect>
+        <x>5</x>
+        <y>35</y>
+        <width>101</width>
+        <height>25</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
-    <widget class="QDoubleSpinBox" name="b_spinbox">
+    <widget class="QGroupBox" name="groupBox_2">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>30</y>
-       <width>69</width>
-       <height>26</height>
+       <x>15</x>
+       <y>105</y>
+       <width>101</width>
+       <height>126</height>
       </rect>
      </property>
-     <property name="minimum">
-      <double>-1000.000000000000000</double>
+     <property name="title">
+      <string>Window</string>
      </property>
-     <property name="maximum">
-      <double>1000.000000000000000</double>
-     </property>
-     <property name="singleStep">
-      <double>0.100000000000000</double>
-     </property>
-     <property name="value">
-      <double>1.000000000000000</double>
-     </property>
-    </widget>
-    <widget class="QSpinBox" name="n_spinbox">
-     <property name="geometry">
-      <rect>
-       <x>5</x>
-       <y>65</y>
-       <width>48</width>
-       <height>26</height>
-      </rect>
-     </property>
-     <property name="minimum">
-      <number>10</number>
-     </property>
-     <property name="maximum">
-      <number>10000</number>
-     </property>
-     <property name="value">
-      <number>100</number>
-     </property>
+     <widget class="QDoubleSpinBox" name="a_spinbox">
+      <property name="geometry">
+       <rect>
+        <x>5</x>
+        <y>30</y>
+        <width>56</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <property name="minimum">
+       <double>-1000.000000000000000</double>
+      </property>
+      <property name="maximum">
+       <double>1000.000000000000000</double>
+      </property>
+      <property name="singleStep">
+       <double>0.100000000000000</double>
+      </property>
+      <property name="value">
+       <double>-1.000000000000000</double>
+      </property>
+     </widget>
+     <widget class="QDoubleSpinBox" name="b_spinbox">
+      <property name="geometry">
+       <rect>
+        <x>5</x>
+        <y>60</y>
+        <width>56</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <property name="minimum">
+       <double>-1000.000000000000000</double>
+      </property>
+      <property name="maximum">
+       <double>1000.000000000000000</double>
+      </property>
+      <property name="singleStep">
+       <double>0.100000000000000</double>
+      </property>
+      <property name="value">
+       <double>1.000000000000000</double>
+      </property>
+     </widget>
+     <widget class="QSpinBox" name="n_spinbox">
+      <property name="geometry">
+       <rect>
+        <x>5</x>
+        <y>90</y>
+        <width>56</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <property name="minimum">
+       <number>10</number>
+      </property>
+      <property name="maximum">
+       <number>10000</number>
+      </property>
+      <property name="value">
+       <number>100</number>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>35</y>
+        <width>16</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>a</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>65</y>
+        <width>67</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>b</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>95</y>
+        <width>67</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>n</string>
+      </property>
+     </widget>
+     <zorder>a_spinbox</zorder>
+     <zorder>b_spinbox</zorder>
+     <zorder>n_spinbox</zorder>
+     <zorder>label</zorder>
+     <zorder>label_2</zorder>
+     <zorder>label_3</zorder>
+     <zorder>groupBox</zorder>
     </widget>
    </widget>
   </widget>
@@ -129,7 +200,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>962</width>
+     <width>963</width>
      <height>22</height>
     </rect>
    </property>
